<resources>
  <string name="app_name">Tic Tac Toe</string>
  <string name="placeholder">Placeholder</string>

  <string name="login_fragment_label">Login</string>
  <string name="game_fragment_label">Tic Tac Toe: Game</string>
  <string name="dashboard_fragment_label">Tic Tac Toe: Dashboard</string>

  <string name="login">Register or Log In</string>
  <string name="logout">Log Out</string>

  <string name="new_game">New Game</string>
  <string name="email">Email</string>
  <string name="password">Password</string>

  <string name="blank"> </string>

  <string name="new_game_dialog_message">Which type of game do you want to create?</string>
  <string name="forfeit_game_dialog_message">Are you sure you want to forfeit this game?</string>

  <string name="two_player">Two-Player</string>
  <string name="one_player">One-Player</string>

  <string name="true_delete">"TRUE_DELETE"</string>

  <string name="yes">Yes</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>
    <string name="gametypeonline">gameTypeOnline</string>
    <string name="_0_0">0, 0</string>
    <string name="_2_1">2, 1</string>
  <string name="_2_2">2, 2</string>
  <string name="_2_0">2, 0</string>
  <string name="_1_2">1, 2</string>
  <string name="_1_1">1, 1</string>
  <string name="_1_0">1, 0</string>
  <string name="_0_2">0, 2</string>
  <string name="_0_1">0, 1</string>
    <string name="loading">Loading…</string>
    <string name="game_list">Game List</string>
  <string name="wait_game_dialog_message">Temporarily wait in Dashboard ?</string>
</resources>