<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/GameFragment_layout"
    tools:context=".GameFragment">

  <include
      android:id="@+id/toolbar_game"
      layout="@layout/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toTopOf="@+id/button1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <ImageButton
      android:id="@+id/button0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:contentDescription="@string/_0_0"
      android:tag="0"
      android:src="@drawable/blank"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="@id/button3"
      app:layout_constraintStart_toStartOf="@+id/button3" />

  <ImageButton
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="1"
      android:contentDescription="@string/_0_1"
      app:layout_constraintBottom_toTopOf="@+id/button4"
      app:layout_constraintEnd_toEndOf="@id/button4"
      app:layout_constraintStart_toStartOf="@+id/button4" />

  <ImageButton
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="2"
      android:contentDescription="@string/_0_2"
      app:layout_constraintBottom_toTopOf="@+id/button5"
      app:layout_constraintEnd_toEndOf="@id/button5"
      app:layout_constraintStart_toStartOf="@+id/button5" />

  <ImageButton
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="3"
      android:contentDescription="@string/_1_0"
      app:layout_constraintBottom_toBottomOf="@id/button4"
      app:layout_constraintEnd_toStartOf="@+id/button4"
      app:layout_constraintTop_toTopOf="@+id/button4" />

  <ImageButton
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="4"
      android:contentDescription="@string/_1_1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
      android:id="@+id/button5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="5"
      android:contentDescription="@string/_1_2"
      app:layout_constraintBottom_toBottomOf="@id/button4"
      app:layout_constraintStart_toEndOf="@+id/button4"
      app:layout_constraintTop_toTopOf="@+id/button4" />

  <ImageButton
      android:id="@+id/button6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="6"
      android:contentDescription="@string/_2_0"
      app:layout_constraintEnd_toEndOf="@id/button3"
      app:layout_constraintStart_toStartOf="@+id/button3"
      app:layout_constraintTop_toBottomOf="@id/button3" />

  <ImageButton
      android:id="@+id/button7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="7"
      android:contentDescription="@string/_2_1"
      app:layout_constraintEnd_toEndOf="@id/button4"
      app:layout_constraintStart_toStartOf="@+id/button4"
      app:layout_constraintTop_toBottomOf="@id/button4" />

  <ImageButton
      android:id="@+id/button8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:src="@drawable/blank"
      android:tag="8"
      android:contentDescription="@string/_2_2"
      app:layout_constraintEnd_toEndOf="@id/button5"
      app:layout_constraintStart_toStartOf="@+id/button5"
      app:layout_constraintTop_toBottomOf="@id/button5" />

  <TextView
      android:id="@+id/status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text=""
      app:layout_constraintBottom_toTopOf="@+id/button1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar_game" />
</androidx.constraintlayout.widget.ConstraintLayout>