<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

  <fragment
      android:id="@+id/loginFragment"
      android:name="androidsamples.java.tictactoe.LoginFragment"
      android:label="@string/login_fragment_label"
      tools:layout="@layout/fragment_login">
    <action
        android:id="@+id/action_login_successful"
        app:destination="@id/dashboardFragment" />
  </fragment>
  <fragment
      android:id="@+id/gameFragment"
      android:name="androidsamples.java.tictactoe.GameFragment"
      android:label="@string/game_fragment_label"
      tools:layout="@layout/fragment_game">
    <!--suppress NavigationFile -->
    <argument
        android:name="gametypeonline"
        app:argType="long"
        android:defaultValue="1L" />
    <argument
        android:name="gameId"
        app:argType="string" />
    <argument
        android:name="currentUserId"
        app:argType="string" />
    <action
        android:id="@+id/action_need_auth_game"
        app:destination="@id/loginFragment" />
    <action
        android:id="@+id/action_delete_game"
        app:destination="@id/dashboardFragment" />
  </fragment>
  <fragment
      android:id="@+id/dashboardFragment"
      android:name="androidsamples.java.tictactoe.DashboardFragment"
      android:label="@string/app_name"
      tools:layout="@layout/fragment_dashboard">
    <action
        android:id="@+id/action_need_auth"
        app:destination="@id/loginFragment" />
    <action
        android:id="@+id/action_game"
        app:destination="@id/gameFragment" />
    <argument
        android:name="uid"
        app:argType="string" />
  </fragment>
</navigation>